.metadata/.plugins/org.eclipse.cdt.ui/Ejer-3-3.build.log
11:22:28 **** Incremental Build of configuration Debug for project Ejer-3-3 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\main.o" "..\\src\\main.c" 
..\src\main.c: In function 'main':
..\src\main.c:22:35: error: too many arguments to function 'pedirNumero'
   22 |  printf("\nNumero ingresado: %d", pedirNumero(numero));
      |                                   ^~~~~~~~~~~
..\src\main.c:15:5: note: declared here
   15 | int pedirNumero(void);
      |     ^~~~~~~~~~~
..\src\main.c: In function 'pedirNumero':
..\src\main.c:31:15: error: 'numero' undeclared (first use in this function)
   31 |  scanf("%d", &numero);
      |               ^~~~~~
..\src\main.c:31:15: note: each undeclared identifier is reported only once for each function it appears in
..\src\main.c:33:1: warning: control reaches end of non-void function [-Wreturn-type]
   33 | }
      | ^

11:22:28 Build Failed. 2 errors, 1 warnings. (took 178ms)

